# easy_whitelist

./: .gitignore  LICENSE  README.md  SECURITY.md  note.md  pyproject.toml  setup.py
easy_whitelist/: __init__.py  __main__.py  _core.py
easy_whitelist/config/: __init__.py  arg.py  log.py
easy_whitelist/doc/: It is a test.docx
easy_whitelist/ip/: agent.py  ip.py  pattern.py  url.py
easy_whitelist/ip_detector/: detectors.py  utils.py
easy_whitelist/tcloud/: client.py  core.py  ls_template.py  template.py
sample/: __init__.py  aa.py  common_client_sample.py  cvm_sample_detail.py  memo.md  sample.py  test.py  test2.py
tests/: test.py
