[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_whitelist"
version = '1.0.56'
description = 'Easy_whitelist is a smart tool that detects the local Internet IP address and automatically updates the local Internet IP address to the cloud security group whitelist. The tool is written in Python.'

authors = [
  {name = "qiqilelebaobao"},
  {name = "qiqilelebaobao", email = "qiqilelebaobao@163.com"}
]
maintainers = [
  {name = "qiqilelebaobao", email = "qiqilelebaobao@163.com"}
]

requires-python = ">= 3.6"
readme = "README.md"
keywords = ["whitelist", "security-groups", "alibaba-cloud", "tencent-cloud", "security-tools"]

license = { file = "LICENSE" }

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
  ]

dependencies = [
  "tencentcloud-sdk-python",
]

# dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/qiqilelebaobao/easy_whitelist"
SelfDefined = "https://github.com/qiqilelebaobao/easy_whitelist"

[project.scripts]
easy = "easy_whitelist.__main__:main"

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[tool.flit.sdist]
include = [
    "SECURITY.md",
    "CODE_OF_CONDUCT.md",
    "tests/"
]
