[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_whitelist"
version = "1.0.89"
description = 'A smart tool that detects the local Internet IP address and automatically updates the local Internet IP address to the cloud security group whitelist.'

authors = [
  {name = "qiqilelebaobao", email = "qiqilelebaobao@163.com"}
]
maintainers = [
  {name = "qiqilelebaobao", email = "qiqilelebaobao@163.com"}
]

requires-python = ">= 3.8"
readme = "README.md"
keywords = ["whitelist", "security-groups", "alibaba-cloud", "tencent-cloud", "security-tools"]

# license = {text = "Apache-2.0"}
# license-files = ["LICENSE"]
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Intended Audience :: System Administrators"
  ]

dependencies = [
  "requests",
  "tencentcloud-sdk-python"
]

# dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/qiqilelebaobao/easy_whitelist"
Source = "https://github.com/qiqilelebaobao/easy_whitelist"

[project.scripts]
ew = "easy_whitelist._core:main"

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

dev = ["orjson"]
test = ["pytest", "simplejson"]
doc = ["sphinx", "ujson"]

[tool.flit.sdist]
include = [
    "SECURITY.md",
    "CODE_OF_CONDUCT.md",
    "tests/"
]
